--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>金川县人民医院</title>
 <link rel="stylesheet" type="text/css" href="css/style.css"/>
+<style type="text/css">
+	.logobox-left img{
+		width: 60%;
+	}
+	.foot_con img{
+		width: 60%;
+	}
+</style>
 <!-- 导航部分 -->
 <script type="text/javascript" src="js/jquery.min.js"></script>
 <script type="text/javascript" src="js/script.js"></script>
@@ -1018,7 +1026,7 @@ $(".main3").FengTab({titCell:".tab3",mainCell:".con3",defaultIndex:0,trigger:"mo
 <div class="footer-box">
 <div class="foot">
   <div class="foot_con">
-    <div class="foot_left"><img src="images/footlogo.png" /></div>
+    <div class="foot_left"><img src="images/foot-logo.png" /></div>
     <div class="foot_right">
       <p> Copyright 2018, 版权所有 金川县人民医院<br />
         健康咨询热线：400-0000-0000 <br />
