--- a/neirong.html
+++ b/neirong.html
@@ -259,7 +259,7 @@ function setContentTab(name, curr, n) {
 <div class="footer-box">
 <div class="foot">
   <div class="foot_con">
-    <div class="foot_left"><img src="images/footlogo.png" /></div>
+    <div class="foot_left"><img src="images/foot-logo.png" /></div>
     <div class="foot_right">
       <p> Copyright 2012, 版权所有 石家庄长江心理精神医院-- 全国百姓放心的网上就医平台<br />
         健康咨询热线：400-0039-120 <br />
