--- a/pindao.html
+++ b/pindao.html
@@ -737,7 +737,7 @@
             <div class="foot">
                 <div class="foot_con">
                     <div class="foot_left">
-                        <img src="images/footlogo.png" />
+                        <img src="images/foot-logo.png" />
                     </div>
                     <div class="foot_right">
                         <p>
